# book-agent

./: .gitignore  README.md  plan.md  pyproject.toml
book_agent/: db.py  display.py  main.py  models.py  ollama_client.py
tests/: conftest.py  test_cli_books.py  test_cli_entries.py  test_models.py
